Change Log for OpenXava project
===============================

- Fix: Unneeded horizontal scrollbar when many modules on top tabs.

OpenXava 6.6 (2021-10-26)
-------------------------
- Last used modules are remembered and they can be accessed using tabs at the top of the module.
- Property rememberVisitedModules in naviox.properties to remember the modules visited in last session.
- Fixed modules (those declared with fixModulesOnTopMenu in naviox.properties) are shown on top as tabs.
- Top button bar is fixed on top of the page when the user scrolls the detail or list view. 
- Left menu with modules is fixed when the user scrolls the main view of the module.
- Responsive top bar button, now when the UI is narrowed the action labels are hidden.	 
- Tooltips for actions include the name of the action, useful when action label is not shown.
- Java annotations can be associated to editors in editors.xml.
- @Password, @Money, @TextArea, @Label, @DateTime as alternative to stereotypes.
- @Discussion, @Icon, @Telephone, @IP, @EmailList, @MAC as alternative to stereotypes.
- @StringTime annotation as alternative to TIME stereotype with String properties. 
- @HtmlText as alternative to HTML_TEXT, with @HtmlText(simple=true) as alternative to SIMPLE_HTML_TEXT.
- Java annotations can be associated to defaul types in annotation-type-default.xml.
- Java annotations can be associated to validators in validators.xml.	
- Java annotations can be associated to a default size in default-size.xml.
- @File/FILE displays a small preview image in list mode if the file is of image type.
- @File and @Files annotations as alternative to FILE and FILES stereotypes.
- FILES and FILE stereotype shows a preview if the uploaded file is an image.
- FILES stereotype is shown inside a frame by default.
- Attribute maxFileSizeInKb in @File/@Files/@FileItemUpload to restrict the size of files to upload.
- Property maxFileSizeInKb in editors.xml definition to restrict the size of files to upload.